Session refact
